<?xml version="1.0"?>
<package format="2">
  <name>tmp_openai</name>
  <version>0.0.0</version>
  <description>tmp_openai</description>

  <maintainer email="naototukka0413@gmail.com">Naoto Tsukamoto</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
